--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
   </head>
   <body></body>
   <script src="bubble.js"></script>
+  <script src="merge.js"></script>
+  <script src="insertion.js"></script>
+  <script src="selection.js"></script>
 </html>
